[WK2][GTK] Application cache directory is incorrectly set https://bugs.webkit.org/show_bug.cgi?id=70680

Patch by Zan Dobersek <zandobersek@gmail.com> on 2011-11-08
Reviewed by Philippe Normand.

Correctly set application cache directory to be in current
user's default cache directory.

* UIProcess/gtk/WebContextGtk.cpp:
(WebKit::WebContext::applicationCacheDirectory):

Canonical link: https://commits.webkit.org/88110@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99537 268f45cc-cd09-0410-ab3c-d52691b4dbfc